--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,19 +5,23 @@
     
     <div class="form-group">
       <%= f.label :first_name %>
-      <%= f.text_field :first_name, :autofocus => true, class: 'form-control' %>
+      <%= f.text_field :first_name, :autofocus => true, class: 'form-control', placeholder: 'John' %>
     </div>
     <div class="form-group">
       <%= f.label :last_name %>
-      <%= f.text_field :last_name, class: 'form-control' %>
+      <%= f.text_field :last_name, class: 'form-control', placeholder: 'Doe' %>
     </div>
     <div class="form-group">
       <%= f.label :interests %>
-      <%= f.text_field :interests, class: 'form-control' %>
+      <%= f.text_field :interests, class: 'form-control', placeholder: 'Rails, AngularJS' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :status %>
+      <%= f.text_field :status, class: 'form-control', placeholder: 'Beginner' %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email, class: 'form-control', placeholder: 'example@example.com' %>
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
