wrench icon homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,11 @@
   </div>
   
   <div id="m-steps">
-    <div class="five-step"></div>
+    <div class="five-step center">
+      <i class="glyphicon glyphicon-wrench center"></i>
+      
+    </div>
+  
     <div class="five-step"></div>
     <div class="five-step"></div>
     <div class="five-step"></div>
