--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -185,9 +185,12 @@ a {
   padding: 20px;
   float: left;
   margin: 40px 10px 0 0;
+  border:2px solid black;
 }
 
-
+.glyphicon{
+  font-size: 5em;
+}
 
 
 .ui-tooltip, .arrow:after {
