--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,23 +2,6 @@
     <h1>OK Codebuddy</h1>
 </div>
 
-<div class="panel panel-default center">
-    <div class="panel-heading">
-        <p>Join the best free code buddy site on Earth.<br>
-        Start meeting people now!
-        </p>
-    </div>
-    <div class="panel-body">
-    <% if user_signed_in? %>
-        <%= link_to raw('<div class="btn btn-default">Edit account</div>'), edit_user_registration_path %>
-        <%= link_to raw('<div class="btn btn-primary">Logout</div>'), destroy_user_session_path, :method=>'delete' %>
-    <% else %>
-        <%= link_to raw('<div class="btn btn-default">Login</div>'), new_user_session_path %>
-        <%= link_to raw('<div class="btn btn-primary">Sign Up</div>'), new_user_registration_path %>
-    <% end %>
-
-    </div>
-</div>
 
 <!-- START CODEPEN -->
 <link href='http://fonts.googleapis.com/css?family=Noto+Serif|Open+Sans:300,600|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
@@ -30,14 +13,26 @@
     
     <p>Make friends, improve your github/resume, learn something new and create something great.</p>
   </div>
-  
-  <div id="m-steps">
-    <div class="five-step center">
-      <i class="glyphicon glyphicon-wrench center"></i>
+  <div id="bike">
       
+    <div class="panel panel-default center">
+        <div class="panel-heading">
+            <h1>Join the best free code buddy site on Earth.<br>
+            <a href="/users">Start meeting people now!</a>
+            </h1>
+        </div>
+        <div class="panel-body">
+        <% if user_signed_in? %>
+            <%= link_to raw('<div class="btn btn-default btn-lg">Edit account</div>'), edit_user_registration_path %>
+            <%= link_to raw('<div class="btn btn-primary btn-lg">Logout</div>'), destroy_user_session_path, :method=>'delete' %>
+        <% else %>
+            <%= link_to raw('<div class="btn btn-default btn-lg">Login</div>'), new_user_session_path %>
+            <%= link_to raw('<div class="btn btn-primary btn-lg">Sign Up</div>'), new_user_registration_path %>
+        <% end %>
+        </div>
     </div>
-  
-    <div class="five-step"></div>
+    
+    <div class="five-step"><i class="glyphicon glyphicon-wrench center"></i></div>
     <div class="five-step"></div>
     <div class="five-step"></div>
     <div class="five-step"></div>
