--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<p>It's like OK Cupid, for people who'd like to find someone to code with rather than to cuddle with.</p>
