--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
 <h1>Pages#contact</h1>
 <div class="jumbotron center">
-    <h1><small>Feel free to send your tips, praise, job offers, or naked photos of yourself to <a href="mailto:johnpc@umich.edu"> johnpc@umich.edu</a>, or contact me at (989)598-7705</small></h1>
+    <h1><small>Send me a message with any comments, questions or concerns. Also feel free to submit an issue or pull request on <a href="https://github.com/johnpc/code_buddy">Github</a></small></h1>
 </div>
 
 <%= form_tag({controller: "pages", action: "contact"}, class: "form") %>
