--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
 <h1><%= @user.first_name %></h1>
-<p><%= @user.mailbox.inbox %>
+<p>Here, there will be a profile photo, github links, user information, and a link to message the user through the built in messaging system.</p>
