--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<div class="col-xs-8 col-xs-offset-2">
+
 <div class="jumbotron">
     <h1>OK Codebuddy</h1>
 </div>
@@ -7,15 +9,15 @@
 <link href='http://fonts.googleapis.com/css?family=Noto+Serif|Open+Sans:300,600|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
   
 <article class="content col-sm-12">
-  <div id="servicing">
+  <div id="servicing" class="col-xs-4">
     <h1 >Find a coder with your interests!</h1>
     <p>Whether you're hacking away at your own pet project or just trying to learn a new technology, it can be helpful to have a buddy right there by your side.</p>
     
     <p>Make friends, improve your github/resume, learn something new and create something great.</p>
   </div>
-  <div id="bike">
+  <div id="bike" class="col-xs-8">
       
-    <div class="panel panel-default center">
+    <div class="panel panel-success center">
         <div class="panel-heading">
             <h1>Join the best free code buddy site on Earth.<br>
             <a href="/users">Start meeting people now!</a>
@@ -23,21 +25,15 @@
         </div>
         <div class="panel-body">
         <% if user_signed_in? %>
-            <%= link_to raw('<div class="btn btn-default btn-lg">Update Profile</div>'), edit_user_registration_path %>
-            <%= link_to raw('<div class="btn btn-primary btn-lg">Logout</div>'), destroy_user_session_path, :method=>'delete' %>
+            <%= link_to raw('<div class="btn btn-default btn-lg col-xs-8 col-xs-offset-2">Update Profile</div>'), edit_user_registration_path %><br />
+            <%= link_to raw('<div class="btn btn-primary btn-lg col-xs-8 col-xs-offset-2">Find a Buddy</div>'), users_path %>
         <% else %>
-            <%= link_to raw('<div class="btn btn-default btn-lg">Login</div>'), new_user_session_path %>
-            <%= link_to raw('<div class="btn btn-primary btn-lg">Sign Up</div>'), new_user_registration_path %>
+            <%= link_to raw('<div class="btn btn-default btn-lg col-xs-8 col-xs-offset-2">Login</div>'), new_user_session_path %><br />
+            <%= link_to raw('<div class="btn btn-primary btn-lg col-xs-8 col-xs-offset-2">Sign Up</div>'), new_user_registration_path %>
         <% end %>
         </div>
     </div>
-    <% if current_user %>
-    <div class="five-step"><%= link_to raw('<i class="glyphicon glyphicon-wrench center"></i>'), edit_user_registration_path %></div>
-    <% else %>
-    <div class="five-step"><%= link_to raw('<i class="glyphicon glyphicon-wrench center"></i>'), new_user_registration_path %></div>
-    <% end %>
-    <div class="five-step"><%= link_to raw('<i class="glyphicon glyphicon-globe center"></i>'), users_path %></div>
-    <div class="five-step"><%= link_to raw('<i class="glyphicon glyphicon-envelope center"></i>'), contact_path %></div>
-    <div class="five-step"><%= link_to raw('<i class="glyphicon glyphicon-info-sign center"></i>'), about_path %></div>
   </div>
 </article>
+
+</div>
