--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-8 col-xs-offset-2">
+<div class="col-md-8 col-md-offset-2">
 
 <div class="jumbotron">
     <h1>OK Codebuddy</h1>
@@ -9,13 +9,13 @@
 <link href='http://fonts.googleapis.com/css?family=Noto+Serif|Open+Sans:300,600|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
   
 <article class="content col-sm-12">
-  <div id="servicing" class="col-xs-4">
+  <div id="servicing" class="col-sm-4">
     <h1 >Find a coder with your interests!</h1>
     <p>Whether you're hacking away at your own pet project or just trying to learn a new technology, it can be helpful to have a buddy right there by your side.</p>
     
     <p>Make friends, improve your github/resume, learn something new and create something great.</p>
   </div>
-  <div id="bike" class="col-xs-8">
+  <div id="bike" class="col-sm-8">
       
     <div class="panel panel-success center">
         <div class="panel-heading">
