--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,6 +23,7 @@
             <a href="/users">Start meeting people now!</a>
             </h1>
             <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+            <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
 
         </div>
         <div class="panel-body">
