--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,9 +22,6 @@
             <h1>Join the best free code buddy site on Earth.<br>
             <a href="/users">Start meeting people now!</a>
             </h1>
-            <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-            <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
-
         </div>
         <div class="panel-body">
         <% if user_signed_in? %>
@@ -33,6 +30,10 @@
         <% else %>
             <%= link_to raw('<div class="btn btn-default btn-lg col-xs-8 col-xs-offset-2">Login</div>'), new_user_session_path %><br />
             <%= link_to raw('<div class="btn btn-primary btn-lg col-xs-8 col-xs-offset-2">Sign Up</div>'), new_user_registration_path %>
+            <%= link_to raw('<div class="btn btn-success btn-lg col-xs-8 col-xs-offset-2">Sign In With Facebook</div>'), user_omniauth_authorize_path(:facebook) %>
+            <!--
+            <%= link_to raw('<div class="btn btn-success btn-lg col-xs-8 col-xs-offset-2">Sign In With Google</div>'), user_omniauth_authorize_path(:google_oauth2) %>
+            -->
         <% end %>
         </div>
     </div>
