--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,7 +3,7 @@
     <h1><small>Send me a message with any comments, questions or concerns. Also feel free to submit an issue or pull request on <a href="https://github.com/johnpc/code_buddy">Github</a></small></h1>
 </div>
 
-<%= form_tag({controller: "pages", action: "contact"}, class: "form") %>
+<%= form_tag({controller: "pages", action: "contact"}, class: "form contact-form") %>
 
 <div class="row">
 <div class="col-xs-6 col-md-6 form-group">
