--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,11 @@
+<%= form_tag users_path, :method => :get do %>
+
+    <p>
+        <%= text_field_tag :search, params[:search] %>
+        <%= submit_tag "Search", :name => nil %>
+    </p>
+<% end %>
+
   <% @users.each do |user| %>
     <% if user.first_name != nil %>
     <div class="user-tile">
