--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,8 @@
-<%= form_tag users_path, :method => :get do %>
+<%= form_tag users_path, :method => :get do |f| %>
 
     <p>
-        <%= text_field_tag :search, params[:search] %>
-        <%= submit_tag "Search", :name => nil %>
+        <%= text_field_tag :search, params[:search], class: 'form-control searchbar col-xs-8', placeholder: 'Name, interests, and more' %>
+        <%= submit_tag raw("Search!"), :name => nil %>
     </p>
 <% end %>
 
