--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,6 +2,7 @@
   <h3>Edit <%= resource_name.to_s.humanize %></h3>
   <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
     <%= devise_error_messages! %>
+    <%= f.file_field :avatar %>
     
     <div class="form-group">
       <%= f.label :first_name %>
@@ -18,6 +19,14 @@
     <div class="form-group">
       <%= f.label :status %>
       <%= f.text_field :status, class: 'form-control', placeholder: 'Beginner' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :github %>
+      <%= f.text_field :github, class: 'form-control', placeholder: 'Github username, i.e. johnpc' %>
+    </div>
+    <div class="form-group">
+      <%= f.label :about %>
+      <%= f.text_area :about, class: 'form-control', placeholder: 'Tell us a little about yourself and your goals!' %>
     </div>
     <div class="form-group">
       <%= f.label :email %>
